--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
             <div class="cara">
                 <p>© 2022 Whirl. All Rights Reserved. Illustrations by <span class="nooo">Streamline</span></p>
                 <div> 
-                    <img src="assets/bird.svg">
-                    <img class="xax" src="assets/in.svg">
-                    <img class="xax" src="assets/feec.svg">
+                    <a href="https://x.com/"><img src="assets/bird.svg">
+                    <a href="https://www.linkedin.com/"><img class="xax" src="assets/in.svg">
+                    <a href="https://www.facebook.com/?locale=ru_RU"><img class="xax" src="assets/feec.svg">
                 </div>
               
             </div>
